[package]
name = "socket-io"
description = "A socket.io library for Iron."
documentation = "https://vibhavp.github.io/socket.io-rs"
version = "0.1.1"
authors = ["Vibhav Pant <vibhavp@gmail.com>"]
license = "MIT"

[dependencies]
engine-io = "0.1.1"
iron = "0.4.0"
serde = "0.8.0"
serde_json = "0.8.0"
